Add note to diagram

--- a/stocks.ipynb
+++ b/stocks.ipynb
@@ -1286,6 +1286,8 @@
    "source": [
     "tmp1 = df['text'][0]\n",
     "\n",
+    "# Making a diagram that illustrated closing price of a given stock over a period of time (2010 - 2017).\n",
+    "\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.plot(pd.to_datetime(tmp1['Date']), tmp1['Close'])\n",
     "plt.title('Close Prices Over Time (2010-2017)')\n",
@@ -1300,14 +1302,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bc81032a-663b-4ee6-8304-000f18c2b114",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21f2c370-8607-4054-ac61-ab1655910a78",
    "metadata": {},
    "outputs": [],
    "source": []
