Made update to readme and made json reader

--- a/txtreader.ipynb
+++ b/txtreader.ipynb
@@ -17,9 +17,8 @@
    "source": [
     "%%writefile txtreader.py\n",
     "\n",
-    "import os\n",
-    "from datetime import datetime\n",
     "import pandas as pd\n",
+    "from meta import getMeta\n",
     "\n",
     "def read_txt(filename):\n",
     "    with open(filename, 'r') as file:\n",
@@ -27,7 +26,7 @@
     "\n",
     "    txt = getDfTxt(raw_txt)\n",
     "    \n",
-    "    mymeta = getMetaTxt(filename)\n",
+    "    mymeta = getMeta(filename)\n",
     "    \n",
     "    return mymeta, txt\n",
     "\n",
@@ -44,24 +43,7 @@
     "\n",
     "    # Make DataFrame\n",
     "    df = pd.DataFrame(data, columns=columns)\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "def getMetaTxt(filename):\n",
-    "    metadata = {}\n",
-    "\n",
-    "    time_pattern = '%Y-%m-%d %H:%M:%S'\n",
-    "\n",
-    "    pt = os.path\n",
-    "    \n",
-    "    metadata['created'] = unixtime_to_datetime(pt.getctime(filename), time_pattern)\n",
-    "    metadata['modified'] = unixtime_to_datetime(pt.getmtime(filename), time_pattern)\n",
-    "    metadata['size'] = pt.getsize(filename)\n",
-    "    return metadata\n",
-    "    \n",
-    "\n",
-    "def unixtime_to_datetime(unix, pattern):\n",
-    "    return datetime.fromtimestamp(unix).strftime(pattern)"
+    "    return df"
    ]
   },
   {
@@ -89,7 +71,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# readable.read_txt()\n",
     "import os\n",
     "pwd = os.getcwd()\n",
     "path = pwd + \"\\\\data\""
@@ -509,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "c1ab3ce5-9687-400e-86d1-4824472b0e9f",
    "metadata": {},
    "outputs": [
@@ -676,7 +657,7 @@
        "[1566 rows x 7 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
