--- a/stocks.ipynb
+++ b/stocks.ipynb
@@ -432,6 +432,16 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "d8465511-8a32-410f-a7d2-f174532b847f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_text = df['text'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "11ec71c4-bbb2-418e-9e7f-d575d6fba3ad",
    "metadata": {
     "scrolled": true
@@ -531,18 +541,18 @@
        "4  2010-07-27  24.477  24.517  24.431  24.517   8456       0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['text'][0].head()"
+    "df_text.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7ba2c2aa-06ee-45df-9c3b-83dd832286e3",
    "metadata": {
     "scrolled": true
@@ -554,18 +564,18 @@
        "(1566, 7)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['text'][0].shape"
+    "df_text.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f46f4f0f-d5d9-4516-bdf8-4152769c0725",
    "metadata": {},
    "outputs": [
@@ -575,13 +585,13 @@
        "Index(['Date', 'Open', 'High', 'Low', 'Close', 'Volume', 'OpenInt'], dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['text'][0].columns"
+    "df_text.columns"
    ]
   },
   {
@@ -594,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "a184e8e8-768b-44ad-9ef7-addbac75b860",
    "metadata": {
     "scrolled": true
@@ -613,19 +623,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Count the missing values in DataFrame\n",
-    "df['text'][0].isnull().sum()"
+    "df_text.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "358897ec-ab21-4987-ae77-75b621738545",
    "metadata": {},
    "outputs": [
@@ -642,33 +652,33 @@
        "Name: 1565, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Hole row with None \n",
-    "df['text'][0].iloc[1565]"
+    "df_text.iloc[1565]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "8493046f-90f7-4a7a-af14-1de01044a877",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Droping OpenInt due to being all zero's:\n",
-    "df['text'][0] = df['text'][0].drop(['OpenInt'], axis=1)\n",
+    "df_text = df_text.drop(['OpenInt'], axis=1)\n",
     "\n",
     "# Droping hole row at index 1565 due to being all None:\n",
-    "df['text'][0] = df['text'][0].drop(1565)"
+    "df_text = df_text.drop(1565)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "db100905-8596-4b9d-a026-93997013785b",
    "metadata": {},
    "outputs": [
@@ -823,48 +833,46 @@
        "[1565 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Now empty/relevant data have been clean/remove:\n",
-    "df['text'][0]"
+    "df_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "c2890001-5641-42a6-8a7b-3f55534d2692",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert columns to numeric if they are not already:\n",
-    "df['text'][0]['Open'] = pd.to_numeric(df['text'][0]['Open'])\n",
-    "df['text'][0]['Close'] = pd.to_numeric(df['text'][0]['Close'])\n",
-    "df['text'][0]['High'] = pd.to_numeric(df['text'][0]['High'])\n",
-    "df['text'][0]['Low'] = pd.to_numeric(df['text'][0]['Low'])\n",
-    "df['text'][0]['Volume'] = pd.to_numeric(df['text'][0]['Volume'])"
+    "df_text['Open'] = pd.to_numeric(df_text['Open'])\n",
+    "df_text['Close'] = pd.to_numeric(df_text['Close'])\n",
+    "df_text['High'] = pd.to_numeric(df_text['High'])\n",
+    "df_text['Low'] = pd.to_numeric(df_text['Low'])\n",
+    "df_text['Volume'] = pd.to_numeric(df_text['Volume'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "6a9cfd0d-3f62-4bd6-b486-bd6ff2fe4ebf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Adding an additional column:\n",
     "# The procent change (daily) from when the marked open to close:\n",
-    "tmp = df['text'][0]\n",
-    "\n",
-    "df['text'][0]['Change%'] =  ((tmp['Open'] - tmp['Close']) / tmp['Close'] * 100)"
+    "df_text['Change%'] =  ((df_text['Open'] - df_text['Close']) / df_text['Close'] * 100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "2de3e5eb-3761-48ab-b0c6-96b23ba9d31f",
    "metadata": {},
    "outputs": [
@@ -1031,26 +1039,18 @@
        "[1565 rows x 7 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['text'][0]"
+    "df_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28f6d031-5954-4da8-bd16-28657e971a9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "e82f04ef-55b4-42a5-aa70-b27a0ce76f54",
    "metadata": {},
    "outputs": [
@@ -1067,19 +1067,19 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Types of attributes\n",
-    "df['text'][0].dtypes"
+    "df_text.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "7d62c6bd-c8e6-4a08-b347-6356353e0f46",
    "metadata": {},
    "outputs": [
@@ -1211,19 +1211,19 @@
        "max       7.224161  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Insights of the value scope\n",
-    "df['text'][0].describe()"
+    "df_text.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "3dab12b6-a77f-4ae5-9e58-31f59ea54497",
    "metadata": {},
    "outputs": [
@@ -1238,8 +1238,8 @@
    ],
    "source": [
     "# Mean of change% and volume\n",
-    "change_procent = np.mean(df['text'][0]['Change%'])\n",
-    "avg = np.mean(df['text'][0]['Volume'])\n",
+    "change_procent = np.mean(df_text['Change%'])\n",
+    "avg = np.mean(df_text['Volume'])\n",
     "\n",
     "print(f'change_procent: {change_procent}')\n",
     "print(f'avg: {avg}')"
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "b0c56ac7-c656-4ee4-a157-adc3a4c24fbf",
    "metadata": {},
    "outputs": [],
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "9abb0be4-f299-4f62-acaf-c20ec0562596",
    "metadata": {},
    "outputs": [
@@ -1284,12 +1284,10 @@
     }
    ],
    "source": [
-    "tmp1 = df['text'][0]\n",
-    "\n",
     "# Making a diagram that illustrated closing price of a given stock over a period of time (2010 - 2017).\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.plot(pd.to_datetime(tmp1['Date']), tmp1['Close'])\n",
+    "plt.plot(pd.to_datetime(df_text['Date']), df_text['Close'])\n",
     "plt.title('Close Prices Over Time (2010-2017)')\n",
     "plt.xlabel('Date')\n",
     "plt.ylabel('Close Price')\n",
@@ -1297,14 +1295,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc81032a-663b-4ee6-8304-000f18c2b114",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
